<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8E808080"
    android:layout_margin="10dp"
    app:cornerRadius="25dp"
    android:weightSum="2"
    android:elevation="30dp"
    android:padding="25dp"
    tools:context=".views.fragments.HomeFragment">

    <TextView
        android:id="@+id/txt_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/fahrenheit_celsius"
        android:textSize="40sp"
        android:textColor="@color/blue_black_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_switch" />

    <Switch
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/fahrenheit"
        android:textOff="@string/celsius"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_unit"/>

    <EditText
        android:id="@+id/city_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/city_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_switch"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_lookup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:textSize="24sp"
        android:text="@string/lookup"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_input"/>

</androidx.constraintlayout.widget.ConstraintLayout>